fixed centering of rates title on mobile

--- a/public/css/responsiveness.css
+++ b/public/css/responsiveness.css
@@ -498,6 +498,7 @@
 
   #rates h1 {
     width: 70%;
+    margin: 0 auto;
   }
 
   #home .contentWrapper {
